syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.demo.grpc";
option java_outer_classname = "ApprovalProto";

package approval;

// Approval Processing Service와 통신하는 서비스
service ApprovalService {
    // 결재 요청 정보를 Processing Service로 전달
    rpc RequestApproval (ApprovalRequest) returns (ApprovalResponse);
    // Processing Service로부터 결재 결과를 전달받음
    rpc ReturnApprovalResult (ApprovalResultRequest) returns (ApprovalResultResponse);
    // Processing Service가 시작할 때 모든 pending 결재 목록 조회
    rpc GetAllPendingApprovals (EmptyRequest) returns (PendingApprovalsResponse);
}

message EmptyRequest {
}

message Step {
    int32 step = 1;
    int32 approverId = 2;
    string status = 3; // pending, approved, rejected
}

message ApprovalRequest {
    int32 requestId = 1;
    int32 requesterId = 2;
    string title = 3;
    string content = 4;
    repeated Step steps = 5;
}

message ApprovalResponse {
    string status = 1; // "received" 등 처리 상태
}

message ApprovalResultRequest {
    int32 requestId = 1;
    int32 step = 2;
    int32 approverId = 3;
    string status = 4; // approved or rejected
}

message ApprovalResultResponse {
    string status = 1;
}

message PendingApprovalsResponse {
    repeated ApprovalRequest approvals = 1;
}
